# file-windows

./: .gitignore  CMakeLists.txt
cmake/Modules/: Findpcre2.cmake
pcre2/: CMakeLists.txt
win-headers/: config.h  unistd.h
